<resources>
    <string name="app_name">Scrolling View</string>
    <string name="title">The Girl Who Fell Beneath the Sea</string>
    <string name="subtitle">The Girl Who Fell Beneath the Sea by Axie Oh</string>
    <string name="text">Deadly storms have ravaged Mina’s homeland for generations. Floods sweep away entire villages, while bloody wars are waged over the few remaining resources.For more information, see at www.goodreads.com.
    \n\n
Deadly storms have ravaged Mina’s homeland for generations. Floods sweep away entire villages, while bloody wars are waged over the few remaining resources. \n
<b>Highlights include:</b>\n
<b><i>Cry for a Shadow</i></b> - Her people believe the Sea God, once their protector, now curses them with death and despair. In an attempt to appease him, each year a beautiful maiden is thrown into the sea to serve as the Sea God’s bride, in the hopes that one day the “true bride” will be chosen and end the suffering. \n\n
<b><i>My Bonnie</i></b> and <b><i> Ain’t She Sweet</i></b> Many believe that Shim Cheong, the most beautiful girl in the village—and the beloved of Mina’s older brother Joon—may be the legendary true bride. But on the night Cheong is to be sacrificed, Joon follows Cheong out to sea, even knowing that to interfere is a death sentence. To save her brother, Mina throws herself into the water in Cheong’s stead.\n\n
        <b><i>Searching</i></b> — Swept away to the Spirit Realm, a magical city of lesser gods and mythical beasts, Mina seeks out the Sea God, only to find him caught in an enchanted sleep. With the help of a mysterious young man named Shin—as well as a motley crew of demons, gods and spirits—Mina sets out to wake the Sea God and bring an end to the killer storms once and for all. \n\n
        <b><i>Ending</i></b> -But she doesn’t have much time: A human cannot live long in the land of the spirits. And there are those who would do anything to keep the Sea God from waking \n\n
    </string>
    <string name="todo">TODO</string>
    <string name="add_comment">Add Comment</string>
</resources>