<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#049F90"
        android:fontFamily="@font/aladin"
        android:padding="@dimen/padding"
        android:text="@string/title"
        android:textColor="#FFFEFE"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading"
        android:contentDescription="@string/app_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amarante"
                android:padding="@dimen/padding"
                android:textStyle="bold"
                android:text="@string/subtitle" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:src="@drawable/img"
                android:contentDescription="@string/todo"/>

            <TextView
                android:id="@+id/article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding"
                android:text="@string/text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/comment_button"
                android:text="@string/add_comment"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
